dark mode fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,15 @@
 
 @layer base {
   html {
-    transition: all 500ms ease-in-out;
+    @apply transition-all duration-500 ease-in-out text-blue-50 dark:text-pink-50;
   }
 }
 
 @layer components {
-  .dark-mode {
-    @apply bg-black text-white;
+  .bgImage {
+    @apply fixed -z-20 dark:opacity-60 brightness-75 w-full h-full object-cover
   }
-  .project-style {
+    .project-style {
     @apply flex items-center justify-center w-full flex-col space-y-6 md:flex-col md:space-x-6 px-8 lg:flex-row;
   }
   .hover-transition {
